--- a/TesteCSS.css
+++ b/TesteCSS.css
@@ -29,7 +29,7 @@ div.rele1_ligado {
     height: 206px;
     border: none;
 		margin:auto;
-    background: url(https://i.ibb.co/jy2fXmV/lampada-ligada.png) no-repeat left top;
+    <img src="https://i.ibb.co/jy2fXmV/lampada-ligada.png" >
 }
 
 div.rele1_desligado {
