--- a/TesteCSS.css
+++ b/TesteCSS.css
@@ -29,7 +29,7 @@ div.rele1_ligado {
     height: 206px;
     border: none;
 		margin:auto;
-    background: url(lampada-ligada.png) no-repeat left top;
+    background: url(https://i.ibb.co/0nHTc94/light-bulb-on.png) no-repeat left top;
 }
 
 div.rele1_desligado {
@@ -39,7 +39,7 @@ div.rele1_desligado {
     width: 300px;
     height: 206px;
     border: none;
-	background: url(lampada-desligada.png) no-repeat left top;
+	background: url(https://i.ibb.co/bdQD186/light-bulb-off.png) no-repeat left top;
 }
 
 div.rele2_ligado {
@@ -49,7 +49,7 @@ div.rele2_ligado {
     width: 300px;
     height: 206px;
     border: none;
-    background: url(lampada-ligada.png) no-repeat left top;
+    background: url(https://i.ibb.co/0nHTc94/light-bulb-on.png) no-repeat left top;
 }
 
 div.rele2_desligado {
@@ -59,7 +59,7 @@ div.rele2_desligado {
     width: 300px;
     height: 206px;
     border: none;
-	background: url(lampada-desligada.png) no-repeat left top;
+	background: url(https://i.ibb.co/bdQD186/light-bulb-off.png) no-repeat left top;
 }
 
 #div1 {
