--- a/TesteCSS.css
+++ b/TesteCSS.css
@@ -29,7 +29,7 @@ div.rele1_ligado {
     height: 206px;
     border: none;
 		margin:auto;
-    background: url(https://i.ibb.co/jy2fXmV/lampada-ligada.png) no-repeat left top;
+    background: url(lampada-ligada.jpg) no-repeat left top;
 }
 
 div.rele1_desligado {
@@ -49,7 +49,7 @@ div.rele2_ligado {
     width: 300px;
     height: 206px;
     border: none;
-    background: url(https://i.ibb.co/jy2fXmV/lampada-ligada.png) no-repeat left top;
+    background: url(lampada-ligada.jpg) no-repeat left top;
 }
 
 div.rele2_desligado {
